[package]
name = "cni-multi"
version = "0.1.0"
authors = ["Ze'ev Klapow <zklapow@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.33"
cidr = { version = "0.1.1", features = ['serde'] }
ctrlc = "3.1.7"
hostname = "^0.3"
log4rs = "0.13.0"
log = "0.4.11"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
clokwerk = "0.3.3"

[[bin]]
name = "multi"
path = "src/main.rs"
